--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-package-lock.json
 yarn.lock
 
 # TypeScript
@@ -38,3 +37,6 @@ logs/
 .temp/
 *.bak
 *.tmp
+
+# Config
+config/config.json
