--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@jest/globals": "^29.7.0",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^22.10.1",
+    "@types/sequelize": "^4.28.20",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "prettier": "3.4.2",
+    "sequelize-cli": "^6.6.2",
     "typescript": "^5.7.2"
   },
   "dependencies": {
@@ -30,6 +34,10 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.5",
     "ts-node": "^10.9.2"
   }
 }
