--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "start": "tsc && node dist/app.js",
+    "test": "jest --detectOpenHandles",
+    "start": "tsc && node dist/bin/www.js",
     "dev": "nodemon src/app.ts",
     "format": "prettier --write ."
   },
@@ -22,11 +22,13 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.1",
     "@types/sequelize": "^4.28.20",
+    "@types/supertest": "^6.0.2",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "prettier": "3.4.2",
     "sequelize-cli": "^6.6.2",
+    "supertest": "^7.0.0",
     "typescript": "^5.7.2"
   },
   "dependencies": {
