--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "prettier": "3.4.2",
-    "sequelize-cli": "^6.6.2",
     "supertest": "^7.0.0",
     "typescript": "^5.7.2"
   },
@@ -40,6 +39,7 @@
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "sequelize-cli": "^6.6.2"
   }
 }
