--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "nodemon": "^3.1.7",
     "prettier": "3.4.2",
     "supertest": "^7.0.0",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "jwt-context": "1.0.4"
   },
   "dependencies": {
     "argon2": "^0.41.1",
